--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
   <header>
     <h1>Peaw Peaw</h1>
-    <p>The cutest in Cambodia ~</p>
+    <p>柬埔寨最可愛~</p>
   </header>
 
   <main class="grid">
@@ -60,9 +60,7 @@
   </main>
 
   <footer>
-    <span>© 2025 My Album</span>
-    ·
-    <a href="./">Refresh</a>
+    <span>© 2025 Peaw Album</span>
   </footer>
 </body>
 </html>
